terraform/Modulos/rds/main.tf
resource "aws_vpc" "main" {
  cidr_block = "10.0.0.0/16"
  tags = {
    Name = "vpc-rds"
  }
}


resource "aws_subnet" "private_a" {
  vpc_id                  = aws_vpc.main.id
  cidr_block              = "10.0.1.0/24"
  availability_zone       = "eu-central-1a" 
  map_public_ip_on_launch = false        
  tags = {
    Name = "private-subnet_a"
  }
}

resource "aws_subnet" "private_b" {
  vpc_id                  = aws_vpc.main.id
  cidr_block              = "10.0.2.0/24"
  availability_zone       = "eu-central-1b" 
  map_public_ip_on_launch = false        
  tags = {
    Name = "private-subnet_b"
  }
}

resource "aws_db_subnet_group" "rds_subnet_group" {
  name       = "rds-subnet-group"
  subnet_ids = [aws_subnet.private_a.id, aws_subnet.private_b.id]
  tags = {
    Name = "rds-subnet-group"
  }
}

resource "aws_db_instance" "dsdj-postgres-db-instance" {
  allocated_storage    = 20
  db_subnet_group_name = aws_db_subnet_group.rds_subnet_group.name
  engine               = "postgres"
  engine_version       = "16.3"
  identifier           = "dsdj-postgres-db"
  instance_class       = "db.t3.micro"
  password             = var.db_password
  skip_final_snapshot  = true
  storage_encrypted    = false
  publicly_accessible   = false
  username             = "postgres"
  apply_immediately    = true
  vpc_security_group_ids = [aws_security_group.rds_sg.id]
}

  resource "aws_security_group" "lambda_sg" {
  name        = "lambda_sg"
  description = "Security group for Lambda functions"
  vpc_id      = aws_vpc.main.id
}

  resource "aws_security_group" "rds_sg" {
  name        = "rds_sg"
  description = "Allow Lambda SG access to RDS"
  vpc_id      = aws_vpc.main.id

  ingress {
    from_port       = 5432
    to_port         = 5432
    protocol        = "tcp"
    security_groups = [aws_security_group.lambda_sg.id] 
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
